Added command feature